# pyworkforce

./: .coveragerc  .readthedocs.yml  .travis.yml  CNAME  CONTRIBUTING.md  README.md  dev-requirements.txt  index.html  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci-tests.yml  docs.yml  publish.yml
code--snippets/: intervals_hard_max.py  intervals_max_duration.py  intervals_soft_max.py
development/: 404.html  README.html  contributing.html  hashmap.json  index.html  release-notes.html
development/api/: breaks.html  queuing.html  rostering.html  scheduling.html  shifts.html  staffing.html
development/assets/: README.md.Dtk1xfy9.js  README.md.Dtk1xfy9.lean.js  README.md.aEprPpbl.js  README.md.aEprPpbl.lean.js  api_breaks.md.CgA5ZP8M.js  api_breaks.md.CgA5ZP8M.lean.js  api_breaks.md.DwxSmEH9.js  api_breaks.md.DwxSmEH9.lean.js  api_queuing.md.CBXO8SPA.js  api_queuing.md.CBXO8SPA.lean.js  api_queuing.md.NSMdNXzl.js  api_queuing.md.NSMdNXzl.lean.js  api_queuing.md.tuIHe_Nf.js  api_queuing.md.tuIHe_Nf.lean.js  api_rostering.md.BbScAIxV.js  api_rostering.md.BbScAIxV.lean.js  api_rostering.md.iyV8uBj0.js  api_rostering.md.iyV8uBj0.lean.js  api_scheduling.md.CUv2E_kw.js  api_scheduling.md.CUv2E_kw.lean.js  api_scheduling.md.DqoSLn4R.js  api_scheduling.md.DqoSLn4R.lean.js  api_shifts.md.DfnYzrH-.js  api_shifts.md.DfnYzrH-.lean.js  api_shifts.md.OasEBoU1.js  api_shifts.md.OasEBoU1.lean.js  api_staffing.md.B4pMJ4qF.js  api_staffing.md.B4pMJ4qF.lean.js  api_staffing.md.DFA-D-KY.js  api_staffing.md.DFA-D-KY.lean.js  app.B1WqONZH.js  app.BP6R5IAZ.js  app.BgMr09bo.js  app.CSVRSIp_.js  app.CzX9SU6U.js  app.D8_RkoEp.js  app.DoIv5gLf.js  app.FDZjRqtw.js  app.OaW_5rk-.js  app.SxvGelun.js  (+116 more)
development/guide/: breaks.html  end-to-end.html  erlanga.html  erlangb.html  erlangc.html  installation.html  introduction.html  multierlang.html  quickstart.html  rostering.html  scenarios.html  scheduling.html  shifts.html  staffing.html
development/recipes/: index.html
docs/: README.md  conf.py  contributing.md  index.md  index.rst  package-lock.json  package.json  release-notes.md  release_notes.rst
docs/.vitepress/: config.mjs
docs/api/: breaks.md  erlangc.rst  min_abs_difference.rst  min_hours_roster.rst  min_required_resources.rst  multierlangc.rst  queuing.md  rostering.md  scheduling.md  shifts.md  staffing.md
docs/guide/: breaks.md  end-to-end.md  (+12 more)
examples/: README.md  end_to_end_planning.py  results-analysis.ipynb  rostering_output.json  scheduling_input.csv  scheduling_meta_input.json  scheduling_output_rostering_input.json
pyworkforce/: __init__.py  _version.py  base.py  solver_params.py
recipe/: meta.yaml
stable/: 404.html  README.html  hashmap.json  index.html  release-notes.html
tests/: test_queing.py  test_shifts.py
(+253 files in other folders)
